Refactor vehicle models into `catalog` package and unify gravity model handling.